tests/data/disable-ipv6-ingress/mergeable/disable-ipv6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disable-ipv6-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
  - hosts:
    - disable-ipv6.example.com
    secretName: disable-ipv6-secret
  rules:
  - host: disable-ipv6.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disable-ipv6-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: disable-ipv6.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disable-ipv6-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: disable-ipv6.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
